Date: Mon,  7 Feb 2022 16:26:30 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.6.1)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.6.2 2022-XX-XX Marc-Etienne Vargenau ==

=== Fixes ===
* Make renaming of pages work for DATABASE_TYPE = PDO and file.
* Make WantedPages work for DATABASE_TYPE = dba and file

== 1.6.1 2022-01-24 Marc-Etienne Vargenau ==

This release makes ~PhpWiki compatible with PHP 8.1.
##READONLY## is renamed as ##ISREADONLY##, since ##readonly## is now a keyword in PHP 8.1.

=== Fixes ===
* Make list of pages work with PDO (~AllPages, ~MostPopular...).
* Better handling of theme change in ~UserPreferences.
* In DATABASE_TYPE = file, do not update metadata if page does not exist (reported by Harold Hallikainen).
* Make the toolbar image button work when ##UPLOAD_USERDIR## is set.
* blog theme improved.

=== Changes ===
* Warn user that leaving the page will lose modifications.
* Add button to create the page if it does not exist.
* TOOLBAR_IMAGE_PULLDOWN is true by default.
* Remove ADODB DATABASE_TYPE. Use SQL (Pear) or PDO.
* Add “Rename” tab in Sidebar theme.
* Page locking and unlocking is now saved in page history (in Edit mode).
* Add sample images for ~PhotoAlbum in blog theme.
* Remove EDITING_POLICY
* Remove ENABLE_XHTML_XML
* Remove USECACHE, always true
* More translations

=== Plugins ===
* Chart plugin: new argument “legend”
* UpLoad plugin: allow more filenames (e.g. with Chinese characters)
* ~PreferencesInfo plugin removed
* ~CategoryPage plugin removed, categories are better created with the button in the toolbar
* ~RecentChangesCached plugin removed, ~RecentChanges plugin is fast enough

== 1.6.0 2021-08-12 Marc-Etienne Vargenau ==

Major release:
* PHP 7 and 8 compatible (works from PHP 5.3.3 to PHP 8.0)